[package]
name = "rust_projects"
version = "0.1.0"
authors = ["yaowenqiang <yaowenqiang111@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pulldown-cmark = "0.4.1"
maud = "0.20.0"
regex = "1.1.0"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    "pgrep"
]

